kubernetes/deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: chatapp  
spec:
  replicas: 1 # Number of replicas
  selector:
    matchLabels:
      app: backend  
  template:
    metadata:
      name: backend
      namespace: chatapp
      labels:
        app: backend
    spec:
      containers:
      - name: backend-container
        image: artech0203/chatapp-backend:letest # Replace with your backend image
        ports:
        - containerPort: 5001
