kubernetes/mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
  namespace: chatapp  
spec:
  replicas: 1 # Number of replicas
  selector:
    matchLabels:
      app: mongodb  
  template:
    metadata:
      name: mongodb-pod
      namespace: chatapp
      labels:
        app: mongodb
    spec:
      containers: 
      - name: mongodb-container
        image: mongo:noble # Replace with your backend image
        # image: mongo:latest # Use the official MongoDB image
        ports:
        - containerPort: 27017
      volumes:
        - name: mongodb-data
          persistentVolumeClaim: 
            claimName: mongodb-pvc
